[project]
name = "asgi-server"
version = "0.1.0"
description = ""
authors = [{ name = "Te-jé Rodgers", email = "tjd.rodgers@gmail.com" }]
dependencies = [
    "starlette~=0.16",
    "maturin~=0.11",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = { text = "CC-PDDC" }

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
package-dir = "./"

[tool.pdm.dev-dependencies]
dev = [
    "typer~=0.3",
]

[project.scripts]
devtools = "devtools:devtools"