[project]
name = "asgi-server"
version = "0.1.0"
description = ""
authors = [{ name = "Te-jé Rodgers", email = "tjd.rodgers@gmail.com" }]
dependencies = [
    "click~=8.0",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = { file = "LICENSE" }

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
package-dir = "./"

[tool.pdm.dev-dependencies]
dev = [
    "maturin~=0.11"]

[project.scripts]
asgi-server = "asgi_server.__main__:main"